# skeever

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile  package.json  vite.config.ts
.github/workflows/: build-api.yml  build-images.yml  build-web.yml  deploy-prod.yml
api/: app_state.rs  config.rs  error.rs  lib.rs  nats.rs  prelude.rs  skeever.rs  websockets.rs
api/events/: message.rs  mod.rs  stream.rs
config/: api.Dockerfile  web.Dockerfile
k8s/base/api/: configmap.yaml  deployment.yaml  service.yaml
k8s/base/web/: configmap.yaml  deployment.yaml  service.yaml
k8s/overlays/production/: ingress.yaml  kustomization.yaml
src/: app.css  app.html
src/lib/themes/: skeever.css
src/routes/: +layout.svelte  +page.svelte
