[package]
name = "skeever"
version = "0.1.0"
edition = "2024"
default-run = "api"

[lib]
name = "skeever"
path = "api/lib.rs"

[[bin]]
name = "api"
path = "api/bin/server.rs"

[dependencies]
async-nats = "0.39.0"
axum = { version = "0.8.1", features = ["ws", "macros"] }
chrono = "0.4.40"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.12", features = ["collector"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
